Add missing User properties
